# financial-advisor

./: Dockerfile  pyproject.toml
src/: app.py  stock_choices.py
